# BitcoinMiningETL

./: Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml
.github/workflows/: code_style_check.yml  run_tests.yml
src/: data_model.py  main.py  test.py
src/mining/: data_model.py  main.py
src/mining/utils/: extract.py  load.py  transform.py
static/: init.sql
tests/: test_key_func.py  test_transform.py  test_utils_func.py
