[project]
name = "BitcoinMining"
version = "0.1"
description = ""
authors = ["Stoner"]
readme = "README.md"
dependencies = [
    "airflow",
    "airflow_providers_mysql",
    "mysqlclient",
    "pytest",
    "pytest-mock",
    "pytest-html"
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]