[tool.poetry]
name = "BitcoinMining"
version = "0.1"
description = "A ETL system to process btc mining index"
authors = ["Stoner <liyf994@nenu.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
apache-airflow = "2.10.3"
apache-airflow-providers-mysql = "5.7.3"
mysqlclient = "2.2.5"
pytest = "7.1.2"
pytest-mock = "3.14.0"
pytest-html = "4.1.1"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = ["src"]
